--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,6 +7,14 @@
     <servlet>
     	<servlet-name>proxibanque-context</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<init-param>
+		    <param-name>contextClass</param-name>
+		    <param-value>org.springframework.web.context.support.AnnotationConfigWebApplicationContext</param-value>
+		</init-param>
+		<init-param>
+		    <param-name>contextConfigLocation</param-name>
+		    <param-value>fr.gtm.project.proxibanque.config</param-value>
+		</init-param>
 		<load-on-startup>1</load-on-startup>
     </servlet>
     
